# net-cppapi

./: .gitignore  .gitmodules  CloneWithSubmodule.md  README.md
src/: README.md  build-debug-x64-targets.bat  build-debug-x86-targets.bat  build-release-x64-targets.bat  build-release-x86-targets.bat  create-csharp-wrapper.bat  nullable.i  sttp.cs.sln  sttp.i  sttp.net.sln
src/lib/: CMakeLists.txt  ChangeLog.md  README.md  build-debug.bat  build-libraries.bat  build-release.bat  create-csharp-wrapper.bat  sttp-libraries.sln  sttp.i
src/lib/sttp.net/: ByteBuffer.cs  Common.cs  CommonPINVOKE.cs  ConfigurationFrame.cs  DataColumn.cs  DataRow.cs  DataSet.cs  DataTable.cs  DataTableCollection.cs  DataType.cs  DeviceMetadata.cs  DeviceMetadataCollection.cs  DeviceMetadataMap.cs  GuidCollection.cs  MeasurementMetadata.cs  MeasurementMetadataCollection.cs  MeasurementMetadataMap.cs  MeasurementStateFlags.cs  NullableBool.cs  NullableDateTime.cs  NullableDecimal.cs  NullableFloat32.cs  NullableFloat64.cs  NullableGuid.cs  NullableInt16.cs  NullableInt32.cs  NullableInt64.cs  NullableInt8.cs  NullableString.cs  NullableUInt16.cs  NullableUInt32.cs  NullableUInt64.cs  NullableUInt8.cs  PhasorMetadata.cs  PhasorMetadataCollection.cs  PhasorReference.cs  PhasorReferenceCollection.cs  PublisherInstance.cs  SecurityMode.cs  SignalIndexCache.cs  (+14 more)
src/lib/sttp.net.lib/: buildso.sh  resource.h  sttp.net.lib.cpp  sttp.net.lib.h  sttp.net.lib.rc  sttp.net.lib.vcxproj  sttp.net.lib.vcxproj.filters
src/lib/sttp.net/Properties/: AssemblyInfo.cs
src/samples/AdvancedPublisher/: AdvancedPublisher.csproj
src/samples/CaptureMetadata/: CaptureMetadata.csproj  Program.cs  SubscriberHandler.cs
src/samples/Publisher/: Program.cs  Publisher.csproj  PublisherHandler.cs
src/samples/Subscriber/: Program.cs  README.md  Subscriber.csproj  SubscriberHandler.cs
src/samples/TemporalSubscriber/: Program.cs  SubscriberHandler.cs  TemporalSubscriber.csproj
src/sttp.cs/: Common.cs  CommonPINVOKE.cs  DataColumn.cs  DataRow.cs  DataSet.cs  DataTable.cs  DataTableCollection.cs  DataType.cs  DeviceMap.cs  DeviceMetadata.cs  DeviceMetadataCollection.cs  ExtendedMeasurement.cs  ExtendedMeasurementCollection.cs  Measurement.cs  MeasurementCollection.cs  MeasurementMap.cs  MeasurementMetadata.cs  MeasurementMetadataCollection.cs  MeasurementMetadataMap.cs  MeasurementStateFlags.cs  NullableDecimal.cs  NullableFloat64.cs  NullableInt32.cs  NullableInt64.cs  NullableString.cs  NullableUInt8.cs  PhasorMetadata.cs  PhasorReferenceCollection.cs  PublisherInstance.cs  SignalIndexCache.cs  SignalReference.cs  SimpleMeasurement.cs  SubscriberConnection.cs  SubscriberConnector.cs  SubscriberInstance.cs  SubscriberInstanceBase.cs  datapublisher_t.cs  decimal_t.cs  guid_t.cs  io_context_t.cs  (+2 more)
src/sttp.cs.lib/: dllmain.cpp  sttp.cs.lib.cpp  sttp.cs.lib.h  sttp.cs.lib.vcxproj  sttp.cs.lib.vcxproj.filters
src/test/SpeedTest/: Program.cs  SpeedTest.csproj
